Fix form spacing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 * {
     box-sizing: border-box;
     font-family: sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 700; /* why is font weight only bold or not */
 }
 
@@ -91,17 +91,26 @@ div.bg-image p a {
     /* opacity: 0.7; */
 }
 
+.main-text {
+    height: 100%;
+    /* display: flex;
+    flex-direction: column; */
+}
+
 .top-text-container {
+    align-items: center;
     background-color: #F9FAFB;
+    height: 33%;
 }
 
 .top-text {
     width: 80%;
-    padding: 120px 0 60px 45px;
+    padding: 30px 0 60px 45px;
     /* font-weight: 550; */
 }
 
 .form-container {
+    height: 40%;
     position: relative;
     z-index: 10;
     box-shadow: 0 5px 10px #949292;
@@ -109,7 +118,7 @@ div.bg-image p a {
 
 .form {
     /* width: 80%; */
-    padding: 20px 0 20px 45px;
+    padding: 10px 0 20px 45px;
 }
 
 .form div {
@@ -118,8 +127,9 @@ div.bg-image p a {
 }
 
 .form > div > div {
-    width: 33%;
+    width: 40%;
     /* width: 380px; */
+    margin-right: 20px;
     padding-bottom: 20px;
 }
 
@@ -128,7 +138,7 @@ label {
     width: max(250px, 50%);
     padding-bottom: 2px;
     color: #575E69;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     /* font-weight: 550; */
     /* font-weight: 200; */
     letter-spacing: 0.1rem;
